src/css/section-knowledges.less
@import "./variables.less";

.section-knowledges {
  background: @c-yellow-light;
  padding: @page-top-margin @page-side-margin;
  font-size: 15px;

  ul {
    font-size: 1rem;
    padding-left: 1em;
    list-style-position: outside;

    li {
      margin-bottom: 1em;
    }
  }

  h1 {
    margin: 0;
    margin-bottom: @spacing;
    text-align: center;
  }

  h2 {
    text-align: center;
    margin: 0 0 @spacing 0;
  }

  .section-knowledges--card {
    .card();
    margin-bottom: @spacing;
    background: @c-yellow;
    overflow: hidden;

    .section-knowledges--card-content {
      padding: @spacing;
    }

    img {
      display: block;
    }

    &:last-child {
      margin-bottom: 0;
    }
  }
}

.button-container {
  text-align: right;
}

@media @desktop {
  .section-knowledges {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .section-knowledges--card {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 900px;

    img {
      width: 50%;
      object-fit: cover;
    }

    h2 {
      .h2();
      text-align: left;
      margin-top: 1em;
    }
  }
}

